<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_fragmentBackground"
        android:orientation="vertical">

        <View
            android:id="@+id/breadcrumbBackgroundLine"
            android:layout_width="65dp"
            android:layout_height="4dip"
            android:layout_marginTop="21dp"
            android:background="@color/color_neutral"
            android:paddingBottom="10dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/imgBreadcrumb1"
            style="@style/style_breadcrumbNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/breadcrumb_circle_highlighted"
            android:text="1"
            android:textColor="@color/color_white"
            app:layout_constraintBottom_toBottomOf="@+id/breadcrumbBackgroundLine"
            app:layout_constraintStart_toStartOf="@+id/breadcrumbBackgroundLine"
            app:layout_constraintTop_toTopOf="@+id/breadcrumbBackgroundLine" />

        <TextView
            android:id="@+id/imgBreadcrumb2"
            style="@style/style_breadcrumbNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/breadcrumb_circle"
            android:text="2"
            app:layout_constraintBottom_toBottomOf="@+id/breadcrumbBackgroundLine"
            app:layout_constraintEnd_toStartOf="@+id/imgBreadcrumb3"
            app:layout_constraintStart_toEndOf="@+id/imgBreadcrumb1"
            app:layout_constraintTop_toTopOf="@+id/breadcrumbBackgroundLine" />

        <TextView
            android:id="@+id/imgBreadcrumb3"
            style="@style/style_breadcrumbNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/breadcrumb_circle"
            android:text="3"
            app:layout_constraintBottom_toBottomOf="@+id/breadcrumbBackgroundLine"
            app:layout_constraintEnd_toEndOf="@+id/breadcrumbBackgroundLine"
            app:layout_constraintTop_toTopOf="@+id/breadcrumbBackgroundLine" />

        <TextView
            android:id="@+id/txtFirstName"
            style="@style/style_smallPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="44dp"
            android:text="@string/txtFirstName"
            app:layout_constraintBottom_toTopOf="@+id/edtFirstName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_input_rectangle"
            android:cursorVisible="true"
            android:elevation="@dimen/dimen_editTextElevation"
            android:focusableInTouchMode="true"
            android:hint="@string/edtFirstNameHint"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingStart="18dp"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintBottom_toTopOf="@+id/txtLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFirstName" />

        <TextView
            android:id="@+id/txtLastName"
            style="@style/style_smallPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="17dp"
            android:text="@string/txtLastName"
            app:layout_constraintBottom_toTopOf="@+id/edtLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_input_rectangle"
            android:cursorVisible="true"
            android:elevation="@dimen/dimen_editTextElevation"
            android:focusableInTouchMode="true"
            android:hint="@string/edtLastNameHint"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingStart="18dp"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@drawable/cursor"
            android:windowSoftInputMode="adjustResize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:gravity="left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLastName">

            <RadioButton
                android:id="@+id/rdbMale"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:fontFamily="@font/font_medium"
                android:text="@string/rdbMale"
                android:focusable="true"
                android:paddingEnd="21dp"
                android:textSize="18sp"
                android:background="@color/color_fragmentBackground"/>

            <RadioButton
                android:id="@+id/rdbFemale"
                android:layout_width="wrap_content"
                android:checked="false"
                android:fontFamily="@font/font_medium"
                android:text="@string/rdbFemale"
                android:textSize="18sp" />

        </RadioGroup>


        <TextView
            android:id="@+id/txtRdbInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/rdbInstructions"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.5"
            android:textSize="14sp"
            android:fontFamily="@font/font_regular"/>

        <Button
            android:id="@+id/btnContinue"
            style="@style/style_buttonText"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_buttonHeight"
            android:background="@drawable/button_rectangle"
            android:cursorVisible="false"
            android:text="@string/btnContinue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

