<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_fragmentBackground"
        android:orientation="vertical">

        <View
            android:id="@+id/breadcrumbBackgroundLine"
            android:layout_width="65dp"
            android:layout_height="4dip"
            android:layout_marginTop="21dp"
            android:background="@color/color_neutral"
            android:paddingBottom="10dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/imgBreadcrumb1"
            style="@style/style_breadcrumbNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/breadcrumb_circle"
            android:text="1"
            app:layout_constraintBottom_toBottomOf="@+id/breadcrumbBackgroundLine"
            app:layout_constraintStart_toStartOf="@+id/breadcrumbBackgroundLine"
            app:layout_constraintTop_toTopOf="@+id/breadcrumbBackgroundLine" />

        <TextView
            android:id="@+id/imgBreadcrumb2"
            style="@style/style_breadcrumbNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/breadcrumb_circle"
            android:text="2"
            app:layout_constraintBottom_toBottomOf="@+id/breadcrumbBackgroundLine"
            app:layout_constraintEnd_toStartOf="@+id/imgBreadcrumb3"
            app:layout_constraintStart_toEndOf="@+id/imgBreadcrumb1"
            app:layout_constraintTop_toTopOf="@+id/breadcrumbBackgroundLine" />

        <TextView
            android:id="@+id/imgBreadcrumb3"
            style="@style/style_breadcrumbNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/breadcrumb_circle_highlighted"
            android:textColor="@android:color/white"
            android:text="3"
            app:layout_constraintBottom_toBottomOf="@+id/breadcrumbBackgroundLine"
            app:layout_constraintEnd_toEndOf="@+id/breadcrumbBackgroundLine"
            app:layout_constraintTop_toTopOf="@+id/breadcrumbBackgroundLine" />

        <TextView
            android:id="@+id/txtPassword"
            style="@style/style_smallPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="44dp"
            android:text="@string/txtPassword"
            app:layout_constraintBottom_toTopOf="@+id/edtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txtPasswordRequirements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_regular"
            android:text="@string/txtPasswordRequirements"
            android:textColor="@color/color_textLight"
            android:textSize="14dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtPassword"
            app:layout_constraintStart_toEndOf="@+id/txtPassword"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_input_rectangle"
            android:cursorVisible="true"
            android:focusableInTouchMode="true"
            android:hint="@string/edtPasswordHint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingStart="18dp"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintBottom_toTopOf="@+id/txtConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"
            android:elevation="@dimen/dimen_editTextElevation"/>

        <TextView
            android:id="@+id/txtConfirmPassword"
            style="@style/style_smallPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="17dp"
            android:text="@string/txtConfirmPassword"
            app:layout_constraintBottom_toTopOf="@+id/edtConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_input_rectangle"
            android:cursorVisible="true"
            android:elevation="@dimen/dimen_editTextElevation"
            android:focusableInTouchMode="true"
            android:hint="@string/edtConfirmPasswordHint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingStart="18dp"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@drawable/cursor"
            android:windowSoftInputMode="adjustResize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword" />

        <Button
            android:id="@+id/btnContinue"
            style="@style/style_buttonText"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_buttonHeight"
            android:background="@drawable/button_rectangle"
            android:text="@string/btnContinue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnBack" />

        <Button
            android:id="@+id/btnBack"
            style="@style/style_buttonText"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_buttonHeight"
            android:background="@drawable/button_rectangle"
            android:text="@string/btnBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnContinue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

       <!-- <ImageView
            android:id="@+id/imgVerifyOverlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/overlay_instructions" />-->

        <!--<TextView
            android:id="@+id/txtVerifyHeading"
            style="@style/style_Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/font_medium"
            android:text="@string/txtVerifyAccountHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgVerifyOverlay"
            android:visibility="gone"/>
-->
        <!--<TextView
            android:id="@+id/txtVerifySubheading"
            style="@style/style_StatementRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/txtWelcomeVideoIntroSubheading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVerifyHeading"
            android:visibility="gone"/>-->

        <!--<TextView
            android:id="@+id/txtVerifyInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/font_regular"
            android:gravity="center"
            android:text="@string/txtVerifyAccount"
            android:textColor="@color/color_accent"
            android:textSize="@dimen/dimen_textSubheading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVerifySubheading"
            android:visibility="gone"/>-->

        <!--<Button
            android:id="@+id/btnDone"
            style="@style/style_filledButtonText"
            android:layout_width="@dimen/dimen_filledButtonWidth"
            android:layout_height="@dimen/dimen_filledButtonHeight"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_filled"
            android:text="@string/btnImDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVerifyInstructions"
            android:visibility="gone"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
